Initial test of GK SIMD instructions