@@ -92,7 +92,7 @@ if "%REPO%"=="" set REPO=%BASEDIR%
 set CLASSPATH="%BASEDIR%"\lib\*
 
 @REM TODO: Set this by the FFX_MEMORY environment variable.
-set EXTRA_JVM_ARGUMENTS=-Xms4G -Xmx4G -Xss1M 
+set EXTRA_JVM_ARGUMENTS=-Xms4G -Xmx4G -Xss1M --add-modules jdk.incubator.vector
 
 goto endInit
 
